--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^3",
     "ajv": "^8.4.0",
-    "tslib": "^1",
+    "minimatch": "^3.0.4",
+    "tslib": "^2.2.0",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
@@ -27,6 +28,8 @@
     "eslint-config-oclif-typescript": "^0.1",
     "mocha": "^8.4.0",
     "nyc": "^15.1.0",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   },
   "engines": {
     "node": ">=8.0.0"
@@ -35,7 +38,7 @@
     "/bin",
     "/lib"
   ],
-  "homepage": "https://github.com/course-key/blinter",
+  "homepage": "https://github.com/course-key/gardener",
   "keywords": [
     "oclif"
   ],
@@ -48,7 +51,9 @@
   "scripts": {
     "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rm -rf lib && tsc -b && oclif-dev readme",
-    "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
+    "test": "nyc --extension .ts mocha \"src/**/*.test.ts\"",
+    "test:e2e": "nyc --extension .ts mocha \"test/**/*.test.ts\"",
+    "test:all": "nyc --extension .ts mocha \"{test,src}/**/*.test.ts\"",
     "version": "oclif-dev readme && git add README.md"
   },
   "types": "lib/index.d.ts"
