--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,11 @@
 {
   "extends": [
     "oclif",
-    "oclif-typescript"
+      "oclif-typescript",
+      "plugin:prettier/recommended"
+  ],
+  "plugins": [
+    "prettier"
   ],
   "rules": {
     "new-cap": "off",
