--- a/package.json
+++ b/package.json
@@ -6,6 +6,16 @@
   "bin": {
     "gardener": "./bin/run"
   },
+  "scripts": {
+    "posttest": "eslint . --ext .ts --config .eslintrc",
+    "prepack": "rm -rf lib && tsc -b && oclif-dev readme",
+    "lint": "eslint '{src,test}/**/*.ts'",
+    "lint:fix": "npm run lint -- --fix",
+    "test": "nyc --extension .ts mocha \"src/**/*.test.ts\"",
+    "test:e2e": "nyc --extension .ts mocha \"test/**/*.test.ts\"",
+    "test:all": "nyc --extension .ts mocha \"{test,src}/**/*.test.ts\"",
+    "version": "oclif-dev readme && git add README.md"
+  },
   "bugs": "https://github.com/course-key/blinter/issues",
   "dependencies": {
     "@oclif/command": "^1",
@@ -50,16 +60,5 @@
   "oclif": {
     "bin": "blinter"
   },
-  "repository": "course-key/gardener",
-  "scripts": {
-    "posttest": "eslint . --ext .ts --config .eslintrc",
-    "prepack": "rm -rf lib && tsc -b && oclif-dev readme",
-    "lint": "eslint '{src,test}/**/*.ts'",
-    "lint:fix": "npm run lint -- --fix",
-    "test": "nyc --extension .ts mocha \"src/**/*.test.ts\"",
-    "test:e2e": "nyc --extension .ts mocha \"test/**/*.test.ts\"",
-    "test:all": "nyc --extension .ts mocha \"{test,src}/**/*.test.ts\"",
-    "version": "oclif-dev readme && git add README.md"
-  },
-  "types": "lib/index.d.ts"
+  "repository": "course-key/gardener"
 }
