--- a/package.json
+++ b/package.json
@@ -3,6 +3,21 @@
   "description": "A simple linter for Git branches",
   "version": "0.0.0",
   "author": "Juan Manuel @Juanelorganelo",
+  "main": "lib/index.js",
+  "license": "MIT",
+  "files": [
+    "/bin",
+    "/lib"
+  ],
+  "engines": {
+    "node": ">=8.0.0"
+  },
+  "homepage": "https://github.com/Juanelorganelo/gardener",
+  "keywords": [
+    "oclif"
+  ],
+  "bugs": "https://github.com/course-key/gardener/issues",
+  "repository": "Juanelorganelo/gardener",
   "bin": {
     "gardener": "./bin/run"
   },
@@ -14,7 +29,20 @@
     "test": "nyc --extension .ts mocha \"src/**/*.test.ts\"",
     "version": "oclif-dev readme && git add README.md"
   },
-  "bugs": "https://github.com/course-key/gardener/issues",
+  "oclif": {
+    "bin": "gardener"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
   "dependencies": {
     "@oclif/command": "^1",
     "@oclif/config": "^1",
@@ -35,27 +63,12 @@
     "eslint-config-oclif-typescript": "^0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
     "mocha": "^8.4.0",
     "nyc": "^15.1.0",
     "prettier": "^2.3.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
-  },
-  "engines": {
-    "node": ">=8.0.0"
-  },
-  "files": [
-    "/bin",
-    "/lib"
-  ],
-  "homepage": "https://github.com/Juanelorganelo/gardener",
-  "keywords": [
-    "oclif"
-  ],
-  "license": "MIT",
-  "main": "lib/index.js",
-  "oclif": {
-    "bin": "gardener"
-  },
-  "repository": "Juanelorganelo/gardener"
+  }
 }
