--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/chai": "^4",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.3.0",
+    "@types/rimraf": "^3.0.0",
     "@types/serialize-javascript": "^5.0.0",
     "chai": "^4",
     "eslint": "^5.13",
@@ -77,6 +78,7 @@
     "mocha": "^8.4.0",
     "nyc": "^15.1.0",
     "prettier": "^2.3.0",
+    "rimraf": "^3.0.2",
     "serialize-javascript": "^5.0.1",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
