--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "scripts": {
     "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rm -rf lib && tsc -b && oclif-dev readme",
+    "build": "tsc --noEmit",
     "lint": "eslint '{src,test}/**/*.ts'",
     "lint:fix": "npm run lint -- --fix",
     "test": "nyc --extension .ts mocha \"test/**/*.test.ts\"",
