--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,14 @@
 name: Main
 
 on:
-  branches:
-    - '**'
   pull_request:
-    - opened
-    - synchronize
-    - reopened
-    - ready_for_review
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - ready_for_review
+    branches:
+      - '**'
 
 jobs:
   install:
